--- a/projects.css
+++ b/projects.css
@@ -122,7 +122,7 @@ a{
     padding-top: 100px;
 }
 
-#youtube{
+#youtube, .video{
     width: 560px;
     height: 315px;
 }
@@ -369,7 +369,7 @@ iframe{
         width: 300px;
     }
 
-    #youtube{
+    #youtube, .video{
         width: 300px;
         height: 200px;
     }
